--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     //var x = 0;
     var sprite;
-    var game = new Phaser.Game(600, 600, Phaser.AUTO, '', { preload: preload, create: create, update: update, render: render })
+    var game = new Phaser.Game(800, 500, Phaser.AUTO, '', { preload: preload, create: create, update: update, render: render })
 
     var answer = 2;
     var question = " QUESTION: 2+2x0= ___ ? ";
@@ -57,7 +57,7 @@
         game.load.baseURL = 'http://examples.phaser.io/assets/';
         game.load.crossOrigin = 'anonymous';
 
-        game.load.image('phaser', 'sprites/phaser-dude.png');
+        game.load.image('phaser', 'sprites/ship.png');
 
     }
 
@@ -74,6 +74,7 @@
     function render() {
 
     }
+
 
     //not sure what this means, connect with the global io
     //i guess this is a separate socket object in the client
