--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <h2>MASTER PEMDAS</h2>
-<h2>Type correct answer. Be careful of the order of operations. Team 1 anwer must include letter 'l' and team 2 must include letter 'r'. For example, Q: 1+0= __? Answer :'L1' or 'R1'.</h2>
+<h2>Type the correct answer. Be careful of the order of operations. Team 1's answer must include the letter 'l' and team 2 must include the letter 'r'. For example, Q: 1+0= __? Answer :'L1' or 'R1'.</h2>
 <h2 id="question"> QUESTION: 2+2x0= ___ ? </h2>
 <ul id="messages"></ul>
 <form action="">
@@ -41,16 +41,15 @@
         }
     }
 
-    //var x = 0;
-    var sprite;
+
+    var phaser;
+    var phazer;
+    var wizball;
+
     var game = new Phaser.Game(800, 500, Phaser.AUTO, '', { preload: preload, create: create, update: update, render: render })
 
     var answer = 2;
     var question = " QUESTION: 2+2x0= ___ ? ";
-    //beginFill(0xFF700B, 1);
-    //var rectDivide = new Phaser.rect(295,0,10,600);
-
-    //reserved function names defined by phaser
 
     function preload() {
 
@@ -58,13 +57,16 @@
         game.load.crossOrigin = 'anonymous';
 
         game.load.image('phaser', 'sprites/ship.png');
+        game.load.image('phazer', 'sprites/ship.png');
+        game.load.image('wizball', 'sprites/wizball.png');
 
     }
 
     function create() {
 
-        sprite = game.add.sprite(300, 0, 'phaser');
-
+        phaser = game.add.sprite(0, 0, 'phaser');
+        phazer = game.add.sprite(700, 0, 'phazer');
+        wizball = game.add.sprite(350, 0, 'wizball');
     }
 
     function update() {
@@ -75,31 +77,25 @@
 
     }
 
-    //not sure what this means, connect with the global io
-    //i guess this is a separate socket object in the client
-
-    //this is a different object than the server object
-    //this is a specific io client object
     var socket = io();
 
     var mynumber;
 
-    //this shows what to do client side, when these events occur
     socket.on('connect',function(data){
 
-        //when i connect as a client, send a message to server saying i joined
+
         socket.emit('join','i am joining now');
     });
 
     socket.on('your number',function(data){
-        //socket.emit('join','i am joining now');
+
         number = data;
         console.log("my number is " + number);
     });
 
     socket.on('starting x',function(data){
 
-        setTimeout(function(){ sprite.x = data; }, 500);
+        setTimeout(function(){ phaser.x = data; }, 0);
 
         console.log("starting x is " + number);
     });
@@ -113,20 +109,20 @@
     });
 
     socket.on('r team point',function(data){
-        sprite.x = sprite.x + 30;
+        phazer.x = phazer.x - 90;
         question = data[0];
         answer = data[1];
         document.getElementById("question").innerHTML = data[0];
-        console.log("sprite should be moving right");
+        console.log("phaser should be moving right");
         console.log(data);
     });
 
     socket.on('l team point',function(data){
-        sprite.x = sprite.x - 30;
+        phaser.x = phaser.x + 90;
         question = data[0];
         answer = data[1];
         document.getElementById("question").innerHTML = data[0];
-        console.log("sprite should be moving left");
+        console.log("phaser should be moving left");
         console.log(data);
     });
 
@@ -142,7 +138,8 @@
     socket.on('chat message', function(msg){
         $('#messages').append($('<li>').text(msg));
         if (msg == "Team 1 Wins!!!!" || msg == "Team 2 Wins!!!!"){
-            sprite.x = 300;
+            phaser.x = 350;
+            phazer.x = 350;
 
 
         }
